new introduction, new struction

--- a/sections/00_title-page.tex
+++ b/sections/00_title-page.tex
@@ -25,7 +25,7 @@
             Eingereicht am & XX.XX.2020 \\
             Betreuung & Prof. Dr.-Ing. Robert Liebich \\
             & Dr. Stephan Pannier \\
-            & M.Eng. Tolga Ya\u{g}c\i{}\\
+            & Tolga Ya\u{g}c\i{}, M.Eng.\\
             & Tobias Werder, M.Sc.\\
             % Themenstellender Betrieb & Rolls-Royce Deutschland Ltd \& Co KG
         \end{tabular}
