--- a/sections/05_practical.tex
+++ b/sections/05_practical.tex
@@ -1,13 +1,11 @@
-\section{Deep Learning for Cycle Counting}
+\section{Model Implementation}
 
 \subsection{Polynomial Regression}
 
-\subsection{Neural Network: Time Series Regression}
-
-\subsubsection{The Neuron}
+\subsection{MLP: Time Series Regression}
 
 \subsection{Convolutional Neural Network: Time Series Classification}
 
 \subsection{Convolutional Neural Network: Time Series Regression}
 
-\subsection{Neural Network: Key Value Regression}
+\subsection{MLP: Key Value Regression}
