--- a/sections/abbrv.tex
+++ b/sections/abbrv.tex
@@ -40,6 +40,30 @@
 	class	=	Engine
 }
 
+\DeclareAcronym{wow}{
+	short 	= 	WOW,
+	long 	=	weight on wheels,
+	class 	= Engine
+}
+
+\DeclareAcronym{tla}{
+	short 	= 	TLA,
+	long 	=	thrust lever angle,
+	class 	= 	Engine
+}
+
+\DeclareAcronym{tra}{
+	short 	= 	TRA,
+	long 	=	thrust lever resolver angle,
+	class 	= 	Engine
+}
+
+\DeclareAcronym{fm}{
+	short	= 	FM,
+	long 	= 	flight mode,
+	class 	= 	Engine
+}
+
 \DeclareAcronym{fe}{
 	short 	= 	FE,
 	long 	= 	Finite Element,
@@ -90,7 +114,7 @@
 
 \DeclareAcronym{ai}{
 	short	=	AI,
-	long	=	Artificial intelligence,
+	long	=	artificial intelligence,
 	class	=	Machine learning
 }
 
@@ -98,4 +122,28 @@
 	short	=	TSC,
 	long	=	time series classification,
 	class	=	Machine learning
+}
+
+\DeclareAcronym{csv}{
+	short	= 	CSV,
+	long 	= 	comma-separated values,
+	class 	= 	Other
+}
+
+\DeclareAcronym{gb}{
+	short	= 	GB,
+	long 	= 	Gigabyte,
+	class 	= 	Other
+}
+
+\DeclareAcronym{pb}{
+	short	= 	PB,
+	long 	= 	Petabyte,
+	class 	= 	Other
+}
+
+\DeclareAcronym{tb}{
+	short	= 	TB,
+	long 	= 	Terabyte,
+	class 	= 	Other
 }
