--- a/sections/preamble.tex
+++ b/sections/preamble.tex
@@ -10,5 +10,12 @@
 \usepackage{csquotes}	% For quotations
 \usepackage[parfill]{parskip} % Line break between pars, no indent
 \usepackage{apacite} 	% For APA-style citations
+\usepackage{natbib}     % For \citet citations
+\usepackage{booktabs}   % For \toprule, etc.
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{setspace}
+% \usepackage{siunits}
 
 \graphicspath{{img/}}
