--- a/sources.bib
+++ b/sources.bib
@@ -134,7 +134,7 @@
 	abstract = {The Jet Engine provides a complete, accessible description of the working and underlying principles of the gas turbine. * Accessible, non-technical approach explaining the workings of jet engines, for readers of all levels * Full colour diagrams, cutaways and photographs throughout * Written by RR specialists in all the respective fields * Hugely popular and well-reviewed book, originally published in 2005 under Rolls Royce s own imprint},
 	language = {English},
 	publisher = {Wiley-Blackwell},
-	author = {{Rolls-Royce plc}},
+	author = {Rolls-Royce plc},
 	month = jul,
 	year = {2015},
 	file = {Royce - 2015 - The Jet Engine.pdf:/home/samuel/Zotero/storage/H54P6FH6/Royce - 2015 - The Jet Engine.pdf:application/pdf}
@@ -169,7 +169,7 @@
 	abstract = {Airlines CareServices},
 	language = {en},
 	urldate = {2020-03-18},
-	author = {{Rolls-Royce plc}},
+	author = {Rolls-Royce plc},
 	year = {2020},
 	note = {Library Catalog: www.rolls-royce.com},
 	file = {Snapshot:/home/samuel/Zotero/storage/QFNB52U4/airlines.html:text/html}
@@ -370,7 +370,158 @@ The proposed approach is an interesting addition to existing learning tools for 
 	month = nov,
 	year = {2019},
 	note = {Conference Name: IEEE/CAA Journal of Automatica Sinica},
-	keywords = {Cameras, data expansion, data mining, Data mining, data sets, Error analysis, Euclidean distance, Microsoft Windows, pattern classification, time series, Time series analysis, time series data mining community, Training, UCR time series archive},
+	keywords = {Training, Cameras, data expansion, data mining, Data mining, data sets, Error analysis, Euclidean distance, Microsoft Windows, pattern classification, time series, Time series analysis, time series data mining community, UCR time series archive},
 	pages = {1293--1305},
 	file = {IEEE Xplore Abstract Record:/home/samuel/Zotero/storage/6DVXB7BE/authors.html:text/html}
+}
+
+@article{lines_time_nodate,
+	title = {Time {Series} {Classification} with {HIVE}-{COTE}: {The} {Hierarchical} {Vote} {Collective} of {Transformation}-based {Ensembles}},
+	language = {en},
+	author = {Lines, Jason and Taylor, Sarah and Bagnall, Anthony},
+	pages = {35},
+	file = {Lines et al. - Time Series Classification with HIVE-COTE The Hie.pdf:/home/samuel/Zotero/storage/BMXMAH79/Lines et al. - Time Series Classification with HIVE-COTE The Hie.pdf:application/pdf}
+}
+
+@misc{konig_br725stats_2018,
+	title = {{BR725Stats}},
+	publisher = {Rolls-Royce Deutschland Ltd \& Co KG},
+	author = {König, Jonas},
+	month = dec,
+	year = {2018}
+}
+
+@misc{reischl_br700-725a1-12_2014,
+	title = {{BR700}-{725A1}-12 {G650} {EHM} {SSRD} {EIS} {Engine} {Health} {Monitoring} ({EHM}) and {Engine} {E}-{TR0109} 09-{ISS10}},
+	shorttitle = {Technical {Report} {No}. {E}-{TR0109} 09-{ISS10}},
+	language = {English},
+	publisher = {Rolls-Royce Deutschland Ltd \& Co KG},
+	author = {Reischl, B and Müller, V.-D.},
+	month = oct,
+	year = {2014},
+	file = {Reischl and Müller - 2014 - BR700-725A1-12 G650 EHM SSRD EIS Engine Health Mon.pdf:/home/samuel/Zotero/storage/UFDGJGNE/Reischl and Müller - 2014 - BR700-725A1-12 G650 EHM SSRD EIS Engine Health Mon.pdf:application/pdf}
+}
+
+@book{schobeiri_gas_2018,
+	title = {Gas {Turbine} {Design}, {Components} and {System} {Design} {Integration}},
+	isbn = {978-3-319-86392-4},
+	url = {https://www.springer.com/gp/book/9783319863924},
+	abstract = {This book written by a world-renowned expert with more than forty years of active gas turbine R\&D experience comprehensively treats the design of gas turbine components and their integration into a complete system. Unlike many currently available gas turbine handbooks that provide the reader with an overview without in-depth treatment of the subject, the current book is concentrated on a detailed aero-thermodynamics, design and off-deign performance aspects of individual components as well as the system integration and its dynamic operation.This new book provides practicing gas turbine designers and young engineers working in the industry with design material that the manufacturers would keep proprietary. The book is also intended to provide instructors of turbomachinery courses around the world with a powerful tool to assign gas turbine components as project and individual modules that are integrated into a complete system. Quoting many statements by the gas turbine industry professionals, the young engineers graduated from the turbomachinery courses offered by the author, had the competency of engineers equivalent to three to four years of industrial experience.},
+	language = {en},
+	urldate = {2020-04-06},
+	publisher = {Springer International Publishing},
+	author = {Schobeiri, Meinhard T.},
+	year = {2018},
+	doi = {10.1007/978-3-319-58378-5},
+	file = {Snapshot:/home/samuel/Zotero/storage/R98C358I/9783319863924.html:text/html}
+}
+
+@article{diebold_origins_2012,
+	title = {On the {Origin}(s) and {Development} of the {Term} '{Big} {Data}'},
+	issn = {1556-5068},
+	url = {http://www.ssrn.com/abstract=2152421},
+	doi = {10.2139/ssrn.2152421},
+	abstract = {I investigate the origins of the now-ubiquitous term “Big Data,” in industry and academics, in computer science and statistics/econometrics. Credit for coining the term must be shared. In particular, John Mashey and others at Silicon Graphics produced highlyrelevant (unpublished, non-academic) work in the mid-1990s. The ﬁrst signiﬁcant academic references (independent of each other and of Silicon Graphics) appear to be Weiss and Indurkhya (1998) in computer science and Diebold (2000) in statistics/econometrics. Douglas Laney of Gartner also produced insightful work (again unpublished and non-academic) slightly later. Big Data the term is now ﬁrmly entrenched, Big Data the phenomenon continues unabated, and Big Data the discipline is emerging.},
+	language = {en},
+	urldate = {2020-04-16},
+	journal = {SSRN Electronic Journal},
+	author = {Diebold, Francis X.},
+	year = {2012},
+	file = {Diebold - 2012 - On the Origin(s) and Development of the Term 'Big .pdf:/home/samuel/Zotero/storage/LKDRG7VS/Diebold - 2012 - On the Origin(s) and Development of the Term 'Big .pdf:application/pdf}
+}
+
+@article{laney_3d_2001,
+	title = {{3D} data management: {Controlling} data volume, velocity and variety},
+	volume = {6},
+	shorttitle = {{3D} data management},
+	number = {70},
+	journal = {META group research note},
+	author = {Laney, Doug},
+	year = {2001},
+	pages = {1},
+	file = {Laney - 2001 - 3D data management Controlling data volume, veloc.pdf:/home/samuel/Zotero/storage/BFI9KRUB/Laney - 2001 - 3D data management Controlling data volume, veloc.pdf:application/pdf}
+}
+
+@article{hilbert_worlds_2011,
+	title = {The {World}'s {Technological} {Capacity} to {Store}, {Communicate}, and {Compute} {Information}},
+	volume = {332},
+	issn = {0036-8075, 1095-9203},
+	url = {https://www.sciencemag.org/lookup/doi/10.1126/science.1200970},
+	doi = {10.1126/science.1200970},
+	language = {en},
+	number = {6025},
+	urldate = {2020-04-16},
+	journal = {Science},
+	author = {Hilbert, M. and Lopez, P.},
+	month = apr,
+	year = {2011},
+	pages = {60--65},
+	file = {Hilbert and Lopez - 2011 - The World's Technological Capacity to Store, Commu.pdf:/home/samuel/Zotero/storage/PVT4FU5K/Hilbert and Lopez - 2011 - The World's Technological Capacity to Store, Commu.pdf:application/pdf}
+}
+
+@article{chen_big_2014,
+	title = {Big {Data}: {A} {Survey}},
+	volume = {19},
+	issn = {1383-469X, 1572-8153},
+	shorttitle = {Big {Data}},
+	url = {http://link.springer.com/10.1007/s11036-013-0489-0},
+	doi = {10.1007/s11036-013-0489-0},
+	abstract = {In this paper, we review the background and state-of-the-art of big data. We first introduce the general background of big data and review related technologies, such as could computing, Internet of Things, data centers, and Hadoop. We then focus on the four phases of the value chain of big data, i.e., data generation, data acquisition, data storage, and data analysis. For each phase, we introduce the general background, discuss the technical challenges, and review the latest advances. We finally examine the several representative applications of big data, including enterprise management, Internet of Things, online social networks, medial applications, collective intelligence, and smart grid. These discussions aim to provide a comprehensive overview and big-picture to readers of this exciting area. This survey is concluded with a discussion of open problems and future directions.},
+	language = {en},
+	number = {2},
+	urldate = {2020-04-16},
+	journal = {Mobile Networks and Applications},
+	author = {Chen, Min and Mao, Shiwen and Liu, Yunhao},
+	month = apr,
+	year = {2014},
+	pages = {171--209},
+	file = {Chen et al. - 2014 - Big Data A Survey.pdf:/home/samuel/Zotero/storage/UY7RZDM6/Chen et al. - 2014 - Big Data A Survey.pdf:application/pdf}
+}
+
+@article{fan_mining_2013,
+	title = {Mining big data: current status, and forecast to the future},
+	volume = {14},
+	issn = {1931-0145, 1931-0153},
+	shorttitle = {Mining big data},
+	url = {https://dl.acm.org/doi/10.1145/2481244.2481246},
+	doi = {10.1145/2481244.2481246},
+	abstract = {Big Data is a new term used to identify the datasets that due to their large size and complexity, we can not manage them with our current methodologies or data mining software tools. Big Data mining is the capability of extracting useful information from these large datasets or streams of data, that due to its volume, variability, and velocity, it was not possible before to do it. The Big Data challenge is becoming one of the most exciting opportunities for the next years. We present in this issue, a broad overview of the topic, its current status, controversy, and forecast to the future. We introduce four articles, written by inﬂuential scientists in the ﬁeld, covering the most interesting and state-of-the-art topics on Big Data mining.},
+	language = {en},
+	number = {2},
+	urldate = {2020-04-17},
+	journal = {ACM SIGKDD Explorations Newsletter},
+	author = {Fan, Wei and Bifet, Albert},
+	month = apr,
+	year = {2013},
+	pages = {1--5},
+	file = {Fan and Bifet - 2013 - Mining big data current status, and forecast to t.pdf:/home/samuel/Zotero/storage/5LI622CT/Fan and Bifet - 2013 - Mining big data current status, and forecast to t.pdf:application/pdf}
+}
+
+@book{kirk_thoughtful_2017,
+	title = {Thoughtful {Machine} {Learning} with {Python}: {A} {Test}-{Driven} {Approach}},
+	isbn = {978-1-4919-2410-5},
+	shorttitle = {Thoughtful {Machine} {Learning} with {Python}},
+	abstract = {Gain the confidence you need to apply machine learning in your daily work. With this practical guide, author Matthew Kirk shows you how to integrate and test machine learning algorithms in your code, without the academic subtext.Featuring graphs and highlighted code examples throughout, the book features tests with Python’s Numpy, Pandas, Scikit-Learn, and SciPy data science libraries. If you’re a software engineer or business analyst interested in data science, this book will help you:Reference real-world examples to test each algorithm through engaging, hands-on exercisesApply test-driven development (TDD) to write and run tests before you start codingExplore techniques for improving your machine-learning models with data extraction and feature developmentWatch out for the risks of machine learning, such as underfitting or overfitting dataWork with K-Nearest Neighbors, neural networks, clustering, and other algorithms},
+	language = {en},
+	publisher = {"O'Reilly Media, Inc."},
+	author = {Kirk, Matthew},
+	month = jan,
+	year = {2017},
+	note = {Google-Books-ID: nG3vDQAAQBAJ},
+	keywords = {Computers / Data Processing, Computers / Databases / Data Mining, Computers / Programming Languages / Python},
+	file = {Kirk - 2017 - Thoughtful Machine Learning with Python A Test-Dr.pdf:/home/samuel/Zotero/storage/99F4KZTN/Kirk - 2017 - Thoughtful Machine Learning with Python A Test-Dr.pdf:application/pdf}
+}
+
+@article{szegedy_going_2014,
+	title = {Going {Deeper} with {Convolutions}},
+	url = {http://arxiv.org/abs/1409.4842},
+	abstract = {We propose a deep convolutional neural network architecture codenamed "Inception", which was responsible for setting the new state of the art for classification and detection in the ImageNet Large-Scale Visual Recognition Challenge 2014 (ILSVRC 2014). The main hallmark of this architecture is the improved utilization of the computing resources inside the network. This was achieved by a carefully crafted design that allows for increasing the depth and width of the network while keeping the computational budget constant. To optimize quality, the architectural decisions were based on the Hebbian principle and the intuition of multi-scale processing. One particular incarnation used in our submission for ILSVRC 2014 is called GoogLeNet, a 22 layers deep network, the quality of which is assessed in the context of classification and detection.},
+	urldate = {2020-04-17},
+	journal = {arXiv:1409.4842 [cs]},
+	author = {Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+	month = sep,
+	year = {2014},
+	note = {arXiv: 1409.4842},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+	file = {arXiv Fulltext PDF:/home/samuel/Zotero/storage/F83Q4YPL/Szegedy et al. - 2014 - Going Deeper with Convolutions.pdf:application/pdf;arXiv.org Snapshot:/home/samuel/Zotero/storage/7XHXGZ2K/1409.html:text/html}
 }
