--- a/thesis.tex
+++ b/thesis.tex
@@ -10,22 +10,25 @@
 \input{sections/00_title-page}
 \restoregeometry
 
+\onehalfspacing
 \input{sections/01_erklaerung}
+\newpage
+\tableofcontents
 \newpage
 \printacronyms[name=List of Abbreviations]
 \newpage
 \input{sections/02_intro}
 \newpage
-% \input{sections/03_state-of-the-art}
-% \newpage
+\input{sections/03_theory}
+\newpage
 \input{sections/04_data}
 \newpage
-% \input{sections/05_deep-learning}
-% \newpage
-% \input{sections/06_discussion}
-% \newpage
-% \input{sections/07_conclusion}
-% \newpage
+\input{sections/05_practical}
+\newpage
+\input{sections/06_discussion}
+\newpage
+\input{sections/07_conclusion}
+\newpage
 % \input{sections/08_thanks}
 % \newpage
 
